2011-02-08 Annemarie Goldmann <annemarie.goldmann@chello.at>

	added testsuite for automated answer-set-tests
	* examples/Makefile.am
	* examples/tests/noSolution.out
	* examples/tests/vectorWithArity3.out
	* examples/tests/undetermined.out
	* examples/tests/bIsMatrix.out
	* examples/tests/symbols.out
	* examples/tests/matheTest.out
	* examples/tests/mathematicaplugintests.test
	* examples/tests/run-dlvhex-tests.sh


2011-01-28 Annemarie Goldmann <annemarie.goldmann@chello.at>
	
	
	* src/mathematicaplugin.cpp: changed output-arity to 3, changed external atom to uniqueLinSolve, calculate solution only if a unique solution exists (by checking ranks first), solutions for symbolic equation systems in polish notation

	* examples/bIsMatrix.hex: changed output arity to 3
	* examples/error.hex: Likewise. 
	* examples/matheTest.hex: Likewise.
	* examples/noSolution.hex: Likewise.
	* examples/symbols.hex: Likewise.
	* examples/undetermined.hex: Likewise.
	* examples/vectorWithArity3.hex: Likewise.


2011-01-09 Annemarie Goldmann  <annemarie.goldmann@chello.at>

	* examples/error.hex: added more examples to test mathematica output
	* examples/noSolution.hex: Likewise.
	* examples/symbols.hex: Likewise.
	* examples/undetermined.hex: Likewise.

	* src/mathematicaplugin.cpp: changed output-arity to 1, output-type to string

2011-01-07 Annemarie Goldmann <annemarie.goldmann@chello.at>

	First commit of Mathematicaplugin - external Atom linearSolve is working for basic example:
	* AUTHORS
   	* ChangeLog
   	* Makefile.am
   	* README
   	* bootstrap.sh
   	* configure.ac
   	* examples/matheTest.hex
   	* include/Makefile.am
   	* include/mathlinksingleton.hpp
   	* src/Makefile.am
   	* src/mathematicaplugin.cpp
   	* src/mathlinksingleton.cpp