@@ -6,6 +6,7 @@ EXTRA_DIST = \
   symbols.hex \
   undetermined.hex \
   vectorWithArity3.hex \
+  tests/answerset_compare.py \
   tests/run-dlvhex-tests.sh \
   tests/mathematicaplugintests.test \
   tests/bIsMatrix.out \
@@ -13,7 +14,8 @@ EXTRA_DIST = \
   tests/noSolution.out \
   tests/symbols.out \
   tests/undetermined.out \
-  tests/vectorWithArity3.out
+  tests/vectorWithArity3.out \
+  tests/error.err
 
 TESTS = tests/run-dlvhex-tests.sh
-TESTS_ENVIRONMENT = DLVHEX=dlvhex TESTDIR=$(top_srcdir)/examples/tests PARAMETERS="-s --plugindir=$(top_builddir)/src"
+TESTS_ENVIRONMENT = TOPSRCDIR=$(top_srcdir) TOPBUILDDIR=$(top_builddir)
